# rust-template

./: Cargo.toml  LICENSE-APACHE  README.md  README.tpl  cargo-generate.toml  shell.nix
.ci/: build.sh  run.sh  setup-ubuntu.sh  setup.sh
src/: main.rs
